--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static',    filename='css/homepage.css') }}">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
-    <title>Kowalski Analytics</title>
+    <title>Project Kowalski</title>
 </head>
 <body>
 	<div id="backbox"></div>
