--- a/clustercounter/templates/home.html
+++ b/clustercounter/templates/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('clustercounter.static',    filename='css/home.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="{{ url_for('clustercounter.static', filename='img/favicon.ico') }}">
-    <title>ICCC+: The Kowalski Edition</title>
+    <title>Project Kowalski: Cluster Counter</title>
 </head>
 
 <body>
