--- a/clustercounter/templates/support.html
+++ b/clustercounter/templates/support.html
@@ -9,7 +9,7 @@
 <!--    <link rel="stylesheet" href="{{ url_for('static',    filename='css/home.css') }}">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
-    <title>ICCC+: Support</title>
+    <title>Project Kowalski: Cluster Counter</title>
 </head>
 <body>
     <header>
