--- a/clustercounter/static/css/home.css
+++ b/clustercounter/static/css/home.css
@@ -31,11 +31,9 @@ header {
     overflow-x: hidden;
 }
 
-#pinguin{
-    height: 70px;
-    margin-top: 5px;
-    margin-right: 10px;
-
+#pinguin {
+    margin: 0 20px;
+    height: 85px;
 }
 
 #titleimg {
@@ -1066,4 +1064,14 @@ header {
     padding-left: 20px;
     cursor: pointer;
 
+}
+
+#imagetitle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: transparent;
+    width: auto;
+    height: auto;
+    color: white;
 }
