--- a/static/css/login.css
+++ b/static/css/login.css
@@ -12,7 +12,7 @@ body {
     top: 0;
     bottom: 0;
 }
-	
+
 #frontbox {
     position: absolute;
 	width: 100%;
@@ -37,7 +37,7 @@ body {
     top: 0;
 	background: #646161;
 	transition: all .5s ease;
-	
+
 }
 
 #buttons {
@@ -69,53 +69,53 @@ body {
 	position: relative;
 	top: 0;
 	left: 2vh;
-	height: 65vh;
+	height: 30vh;
 	width:  38vh
-	
+
+}
+
+#bodybox{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 }
 
 #title {
-	position: absolute;
-	bottom: 2vw;
-	height: 20vh;
+	margin: 5vh;
+	height: 90vh;
 }
 
 #logoorange {
 	position: absolute;
+	height: 45vh;
 }
 
 #logopurple {
 	position: absolute;
 }
 
-#userbox {
-	position: absolute;
-	display: flex;
-	bottom: 0;
-	right: 0;
-	margin: 5vh;
-
-}
-
-#sessionname {
-	margin: 0 20px;
-	font-size: 40px;
+#statusbox {
+	text-align: left;
+	margin-top: 0vh;
+	margin-left: 0vw;
 	color: white;
-
+	line-height: 3;
 }
 
-#logout {
-	background: transparent;
-	border: solid 2px white;
-	color: white;
-	font-size: 40px;
-	padding: 0 10px;
-	border-radius: 5px;
-	transition: all 0.2s;
-	cursor: pointer;
+.colortext {
+	color: #d4a847;
 }
 
-#logout:hover {
-	background: white;
-	color: #171717
+.colortextpurple {
+	color: #8d3cd7;
+}
+
+.colortextred {
+	color: #7a2120;
 }
