--- a/static/css/login.css
+++ b/static/css/login.css
@@ -101,11 +101,51 @@ body {
 }
 
 #statusbox {
+	position: relative;
 	text-align: left;
-	margin-top: 0vh;
-	margin-left: 0vw;
+	margin: 0 10vw;
 	color: white;
 	line-height: 3;
+}
+#statusboxp {
+	font-size: 25px;
+	line-height: 150%;
+	text-align: justify;
+}
+
+#sessionIDbox {
+	display: flex;
+}
+
+#sessionIDform {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+}
+
+#setsessionID {
+	font-size: 30px;
+	color: white;
+}
+
+#forminputtext {
+	margin: 0;
+	position: relative;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+	font-size: 30px;
+}
+
+#forminputsubmit {
+	margin: 0;
+	position: relative;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+	font-size: 30px;
+	height: 35px;
+	padding: 0 20px;
 }
 
 .colortext {
@@ -119,3 +159,4 @@ body {
 .colortextred {
 	color: #7a2120;
 }
+
