--- a/clustercounter/templates/home.html
+++ b/clustercounter/templates/home.html
@@ -75,7 +75,7 @@
              <div class="backboxes" id="analysisoptions">
                 <p id="analysisoptionstext">Analysis options</p>
                 <div class="variable-box" id="analysisoptionsbox">
-                    <input class="anoptionsinput" type="radio" value="0" name="myAN" id="anoption1">
+                    <input class="anoptionsinput initial" type="radio" value="0" name="myAN" id="anoption1">
                     <label rel="panel1" class="anoptionslabel active" for="anoption1">Cluster analysis </label>
                     <input class="anoptionsinput" type="radio" value="1" name="myAN" id="anoption2">
                     <label rel="panel2" class="anoptionslabel" for="anoption2">Whole 2D area analysis</label>
