--- a/clustercounter/templates/home.html
+++ b/clustercounter/templates/home.html
@@ -124,7 +124,17 @@
             <div class="backboxes" id="ROIpanel1">
                 <div class="fginbox">
                     <span id="manualROItext">Click anywhere on the image to outline the region of interest </span>
-                    <button id="submitROIbutton">Finish</button>
+                    <button id="submitROIbutton">Send ROI</button>
+                    <div id="widthbox">
+                        <h1 id="Linewidth">Width</h1>
+                            <p class="inputbox">
+                                <span class="input">
+                                    <input type="number" id="LineWidth" value="0">
+                                    <span></span>
+                                </span>
+                            </p>
+                    </div>
+                    <button id="submitlinebutton">Send Line</button>
                 </div>
             </div>
             <div class="backboxes" id="ROIpanel2">
