New line tresh v1

--- a/clustercounter/templates/home.html
+++ b/clustercounter/templates/home.html
@@ -232,6 +232,14 @@
             </div>
             <div id="options">
                 <div id="options1">
+                    <div id="maxlinebox">
+                        <span id="maxline">Max line length:</span>
+                        <div class="inputbox">
+                                <span class="input">
+                                    <input type="number" id="maxlineinput" value="0" step="0.01">
+                                </span>
+                        </div>
+                    </div>
                     <div id="pxµmbox">
                         <span id="pxµm">px/µm:</span>
                         <div class="inputbox">
