--- a/clustercounter/static/css/home.css
+++ b/clustercounter/static/css/home.css
@@ -1013,7 +1013,29 @@ header {
     outline: none;;
 }
 
+#maxlinebox {
+    display: flex;
+    background: #e4e4f1;
+    padding: 5px 20px;
+    border:2px solid #342834;
+    border-radius: 5px;
+    text-decoration:none;
+    font-size: 25px;
+    font-weight:500;
+    color: black;
+    text-align:center;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.2s;
+    outline: none;;
+}
+
 #pxµminput {
+    width: 100px;
+    margin-bottom: 5px;
+}
+
+#maxlineinput {
     width: 100px;
     margin-bottom: 5px;
 }
